[package]
name = "zmq"
version = "0.1.3"
authors = ["Qin Zhuang <66458804@QQ.com>"]
license = "MIT"
description = "High-level bindings to the zeromq library"
repository = "https://github.com/Ginurx/zmq-rs"

[dependencies]
libc = "0.2.*"
zmq-ffi = { path = "zmq-ffi" }
cfg-if = "0.1.0"

[[example]]
name = "hwserver"
path = "examples/zguide/hwserver.rs"

[[example]]
name = "hwclient"
path = "examples/zguide/hwclient.rs"

[[example]]
name = "version"
path = "examples/zguide/version.rs"
